[gd_scene load_steps=20 format=3 uid="uid://bmp706pm7hqqk"]

[ext_resource type="Script" path="res://Scripts/zombie_cheerleader.gd" id="1_6h8yu"]
[ext_resource type="Texture2D" uid="uid://d074bnnm1cyb5" path="res://animations/zombie_cheerleader_walk/cheerleader_zombie.png" id="2_5ka5b"]
[ext_resource type="AudioStream" uid="uid://dxfxf1op5vcac" path="res://audio/zombie/zombie_walk.mp3" id="3_kgj5i"]
[ext_resource type="Texture2D" uid="uid://eqphr5q41kjd" path="res://animations/zombie_cheerleader_walk/cheerleader_zombie1.png" id="3_vvh21"]
[ext_resource type="AudioStream" uid="uid://l82nv4xxfb8m" path="res://audio/zombie/zombie_attack1.mp3" id="4_giynu"]
[ext_resource type="Texture2D" uid="uid://di8dn82nstv26" path="res://animations/zombie_cheerleader_walk/cheerleader_zombie2.png" id="4_rrc0t"]
[ext_resource type="Texture2D" uid="uid://m6lkh51065oy" path="res://animations/zombie_cheerleader_walk/cheerleader_zombie3.png" id="5_k562a"]
[ext_resource type="AudioStream" uid="uid://cvun8lh7arxtf" path="res://audio/zombie/zombie_attack2.mp3" id="5_rxv0p"]
[ext_resource type="Script" path="res://scenes/area_2d_2.gd" id="9_fdn4o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sxtcu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5ka5b")
}, {
"duration": 1.0,
"texture": ExtResource("3_vvh21")
}, {
"duration": 1.0,
"texture": ExtResource("4_rrc0t")
}, {
"duration": 1.0,
"texture": ExtResource("5_k562a")
}, {
"duration": 1.0,
"texture": ExtResource("4_rrc0t")
}, {
"duration": 1.0,
"texture": ExtResource("3_vvh21")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_708ik"]
radius = 52.0
height = 328.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm4jf"]
size = Vector2(207, 212)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_116qi"]
size = Vector2(57.3333, 210.667)

[sub_resource type="Curve" id="Curve_dxbw3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.941176, 0.519556), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ej2sb"]
colors = PackedColorArray(0, 1, 0.261719, 1, 0, 1, 0.566406, 1)

[sub_resource type="Curve" id="Curve_myjxr"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xanv8"]
bg_color = Color(0.835294, 0.054902, 0.0509804, 1)

[sub_resource type="Curve" id="Curve_irr72"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsjtu"]

[node name="ZombieCheerleader" type="CharacterBody2D" groups=["zombie"]]
z_index = 2
script = ExtResource("1_6h8yu")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sxtcu")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.739837

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_708ik")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.705, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.5, -1)
scale = Vector2(1.17, 1.54)
shape = SubResource("RectangleShape2D_lm4jf")
debug_color = Color(0.996896, 0, 0.318943, 0.42)

[node name="BulletZone" type="Area2D" parent="."]
scale = Vector2(1.395, 1.595)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletZone"]
position = Vector2(-0.666668, -0.666667)
scale = Vector2(2.4, 1)
shape = SubResource("RectangleShape2D_116qi")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="zombie_walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kgj5i")
volume_db = -5.845
max_distance = 800.0
bus = &"Environment"

[node name="zombie_hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_giynu")
volume_db = -10.182
bus = &"Environment"

[node name="zombie_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rxv0p")
bus = &"Environment"

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2(0, 163)
amount = 500
lifetime = 0.5
speed_scale = 0.6
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(300, 1)
gravity = Vector2(0, -500)
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_dxbw3")
color = Color(0, 1, 0.261719, 1)
color_ramp = SubResource("Gradient_ej2sb")
hue_variation_min = -0.08
hue_variation_max = 0.15
hue_variation_curve = SubResource("Curve_myjxr")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-20.625, 150.953)
amount = 300
lifetime = 0.15
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(58.68, 13.7)
direction = Vector2(13.415, 0)
spread = 165.45
gravity = Vector2(0, -980)
initial_velocity_max = 120.28
radial_accel_min = -1.25
radial_accel_max = 21.15
tangential_accel_max = 100.0
scale_amount_max = 4.0

[node name="ground_hit" type="CPUParticles2D" parent="."]
position = Vector2(-10, 161.303)
emitting = false
amount = 181
lifetime = 0.3
one_shot = true
speed_scale = 1.5
explosiveness = 0.78
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(80.155, 1)
direction = Vector2(13.415, 0)
spread = 165.45
gravity = Vector2(0, -980)
radial_accel_min = -1.25
radial_accel_max = 21.15
scale_amount_min = 4.0
scale_amount_max = 10.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -45.0
offset_top = -196.0
offset_right = 50.0
offset_bottom = -169.0
theme_override_styles/fill = SubResource("StyleBoxFlat_xanv8")
max_value = 20.0
step = 1.0
show_percentage = false

[node name="blood_splatter" type="CPUParticles2D" parent="."]
position = Vector2(5.33333, -29.3333)
emitting = false
amount = 100
lifetime = 0.3
speed_scale = 0.8
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 3.75
direction = Vector2(0, 0)
spread = 180.0
initial_velocity_min = 29.2
initial_velocity_max = 138.69
scale_amount_min = 2.0
scale_amount_max = 8.3
color = Color(0.183655, 0.691406, 0, 1)
hue_variation_min = -0.05
hue_variation_max = 0.05
hue_variation_curve = SubResource("Curve_irr72")

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource("9_fdn4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
scale = Vector2(29.255, 16.91)
shape = SubResource("RectangleShape2D_qsjtu")
debug_color = Color(0.021875, 0.7, 0, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="BulletZone" to="." method="_on_bullet_zone_area_entered"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
